# jpas

./: .gitignore  Cargo.toml  README.md
bash-version/: README.md  jpas-open.sh  jpas-save.sh
bash-version/tests/: test-jpas-open-secrets-work.sh
bash-version2/: README.md  init.sql  jpas-decrypt.sh  jpas-get.sh  jpas-init.sh  jpas-set.sh  jpas-test.sh
src/: gpg.rs  json.rs  main.rs
src/commands/: init.rs  mod.rs  open.rs  query.rs  save.rs
tests/basic/: Example.ssh.json  Example.website.json
tests/gpg/: init-testkey.sh  start-bash-with-testkeys.sh  test-private.keys
