[package]
name = "jpas"
version = "0.1.0"
authors = ["Jari O. O. Pennanen <ciantic@oksidi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }
serde = "*"
serde_json = { version = "1.0", features = ["preserve_order"] }
derive_more = "0.99"

[dev-dependencies]
# NOTE: We need normpath crate, because the canonicalization in Windows adds UNC
# prefix, which fails to work with GPG4Win
normpath = "0.2"

once_cell = "1.5"
